Revision history for Text-VimColor

{{$NEXT}}

0.14      2011-10-20T17:09:53Z

  - Add test to confirm fix of rt-50646.
  - Silence 'untie' warnings.

0.13      2011-08-15T23:10:00Z

  [Prereqs]
  - Exit Makefile.PL early if `vim` fails to execute.
    (Nothing else will work after that.)
  - Bump required version of Term::ANSIColor to 3.0.
    (Please let me know if this causes problems for anyone.)

  [Dist Meta Changes]
  - Convert to Dist::Zilla for releasing
  - Use File::ShareDir to manage included files consistently
  - Simplify and organize documentation and tests

0.12     2011-08-09T19:33:16Z

  [Enhancements]
  - Add Term::ANSIColor support
    Closes RT #69338.
  - Add '-n' (no swapfile) option (thanks hinrik.sig).
    Closes RT #45623.

  [Bug Fixes]
  - Set $ENV{HOME} to keep user-customized syntax files from
    breaking tests.  Closes RT #68513.
  - Untie STD(IN|OUT|ERR) in child process (thanks shiar).
    Closes RT #50646.

  [Maintenance Status Change]
  - Co-maintenance granted to Randy Stauner (RWSTAUNER) by PAUSE admins.
    Much appreciation to Geoff Richards (GEOFFR) for his initial work.

0.11     2006-02-19T19:32:27Z

  * No code changes, just packaging fixes.

0.10     2006-02-19T00:22:35Z

  * Be more careful about how 'exec' is called (belt & braces)

  * Improve error reporting.  Errors printed by the 'vim' command,
    as well as problems reported from 'exec' (like not being able
    to find the program) will now be reported (by getting passed
    through a temporary file).  Also, some 'die' calls were changed
    to 'croak'.

  * Allow the 'filetype' option to be overridden for each file
    processed, so that an object can be reused for multiple files
    of different types.

  * Provide a help/usage message in the text-vimcolor program.

  * Document which other CPAN modules use Text::VimColor, since
    you might find one of them be more useful than using it
    directly.

  * Various small corrections to the documentation.
