@@ -2,6 +2,8 @@ Revision history for Text-VimColor
 
 {{$NEXT}}
 
+  - Allow debugging based on TEXT_VIMCOLOR_DEBUG env var
+
 0.14      2011-10-20T17:09:53Z
 
   - Add test to confirm fix of rt-50646.
